# GranularBasicsV2

./: CMakeLists.txt  LICENSE  README.md  visual.py
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client_AAX.cpp
Source/: Envelope.cpp  Main.cpp  SingleTapDelay.cpp  notworkinglol.cpp
